--- a/models/official/projects/detr/configs/detr_tpu_v3_640_train.yaml
+++ b/models/official/projects/detr/configs/detr_tpu_v3_640_train.yaml
@@ -8,4 +8,4 @@ task:
    global_batch_size: 64
   validation_data:
     global_batch_size: 2
-  init_checkpoint:"gs://cam2-models/maskformer_vishal_exps/resnet50_pretrained/tfmg/ckpt-62400"
+  init_checkpoint: 'gs://cam2-models/maskformer_vishal_exps/resnet50_pretrained/tfmg/ckpt-62400'
