--- a/models/official/projects/detr/configs/detr_tpu_v3_640_train.yaml
+++ b/models/official/projects/detr/configs/detr_tpu_v3_640_train.yaml
@@ -6,6 +6,9 @@ task:
       input_size: [640, 640, 3]
   train_data:
    global_batch_size: 64
+   input_path: 'gs://cam2-datasets/coco/train*'
   validation_data:
     global_batch_size: 2
+    input_path: 'gs://cam2-datasets/coco/val*'
   init_checkpoint: 'gs://cam2-models/maskformer_vishal_exps/resnet50_pretrained/tfmg/ckpt-62400'
+  annotation_file: ''gs://cam2-datasets/annotations/instances_val2017.json'
